# nix-findcudatoolkit-cmake

./: CMakeLists.txt  cusoftmax.h  default.nix  flake.nix  ldd-hook.sh  main.cc  softmax.cu  use-cudatoolkit-root.nix  use-legacy.nix
.github/actions/setup-nix/: action.yml
.github/workflows/: build-unfree.yml
some-app/: CMakeLists.txt  default.nix  main.cc
some-lib/: CMakeLists.txt  default.nix  some.cc  some.h
